# VEXIS

./: .env.example  .gitignore  ARCHITECTURE.md  DEPLOY.md  LAUNCH_CHECKLIST.md  README.md  SECURITY_AUDIT.md  decisions.md  docker-compose.yml  documentation.md  run.bat  status.md
backend/: Dockerfile  alembic.ini  pyproject.toml  railway.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: celery_app.py  config.py  main.py
backend/app/analysis/: auth_analyzer.py  race_detector.py  second_order.py  semgrep_runner.py
backend/app/api/: deps.py
backend/app/core/: auth.py  crypto.py  git_ops.py  incremental.py  language_detect.py  orchestrator.py  rate_limiter.py  storage.py
backend/app/correlation/: confidence.py  dedup.py  fuser.py
backend/app/exploit/: attack_flow.py  autofix_generator.py  classifier.py  poc_generator.py  pr_generator.py  script_generator.py
backend/app/ingestion/: call_graph.py  graph_folder.py  parser.py  pdg_builder.py  trust_boundaries.py
backend/app/models/: finding.py  scan.py  schemas.py  user.py
backend/app/reasoning/: budget.py  llm_client.py  pass_1_sanitizer.py  pass_2_exploit.py  pass_3_chains.py  pass_4_discovery.py  prompt_builder.py  (+1 more)
backend/prompts/: chain_discovery.jinja2  exploit_feasibility.jinja2  remediation_suggestion.jinja2  sanitizer_evaluation.jinja2  severity_assessment.jinja2
backend/tests/: run_cross_file.py  run_e2e.py  run_full_corpus.py  run_real_world.py  test_java_samples.py  test_polyglot_samples.py  test_taint_engine.py  test_vulnerable_samples.py
(+147 files in other folders)
